--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "scripts": {
     "start": "node ./dist/server.js",
     "dev": "ts-node-dev --respawn --transpile-only ./src/server.ts",
-    "lint": "npx eslint src --ignore-pattern '.js,.ts,.jsx,.tsx'",
+    "lint": "npx eslint src",
     "lint:fix": "npx eslint src --fix",
     "format": "npx prettier --ignore-path .prettierignore --write \"**/*.{js,ts,jsx,tsx,json}\"",
     "test": "echo \"Error: no test specified\" && exit 1"
